<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/inputTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:text="@string/input_guide"
        android:textSize="24sp"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_theme_light_outline" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginEnd="24dp"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/textViewName"
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="홍길동"
                android:textAlignment="center"
                android:textSize="24sp"
                android:background="@drawable/shape_round_square"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="24dp"
                android:text="@string/sex"
                android:textSize="24sp" />
            <RadioGroup
                android:id="@+id/group"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:background="@drawable/shape_round_square"
                android:paddingLeft="24dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioMan"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/man"/>
                <RadioButton
                    android:id="@+id/radioWoman"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/woman"/>
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/textViewBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:textSize="24sp" />

        <DatePicker
            android:id="@+id/birthDatePicker"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:background="@drawable/shape_round_square"
            android:calendarViewShown="false"/>


        <TextView
            android:id="@+id/textViewSignificant"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editTextSignificant"
            android:text="@string/significant"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextSignificant"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_round_square"
            />


        <Button
            android:id="@+id/navbutton"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>