<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/textViewBirthDate"
        android:layout_marginLeft="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="24sp" />

    <TimePicker
        android:layout_gravity="center"
        android:id="@+id/timePicker"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:background="@drawable/shape_round_square" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_theme_light_outline" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/alarm_name"
                android:layout_marginEnd="24dp"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/textViewNameInput"
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="아침"
                android:textAlignment="center"
                android:textSize="24sp"
                android:background="@drawable/shape_round_square"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/alarm_title2"
                android:layout_marginEnd="24dp"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/EditTextTitle"
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="아침알림"
                android:textAlignment="center"
                android:textSize="24sp"
                android:background="@drawable/shape_round_square"
                />
        </LinearLayout>




        <TextView
            android:id="@+id/textViewAlarmContent"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editTextSignificant"
            android:text="@string/alarm_content"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextAlarmContent"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="20dp"
            android:background="@drawable/shape_round_square"
            android:text="약 먹을 시간입니다."
            />


        <Button
            android:id="@+id/navbutton"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>