<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alarmSettingFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AlarmSettingFragment"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_title"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <ImageButton
            android:id="@+id/add_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/baseline_add_48"
            android:background="@color/md_theme_light_onSecondary"
            android:visibility="gone"
            android:contentDescription="AlarmAdd" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_info"
        android:textSize="14sp"
        android:textStyle="bold"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_theme_light_outline" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alarmRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="20dp"
        android:text="@string/apply"
        android:textAlignment="center"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="10dp"/>



</LinearLayout>